fixed styling issues on mobile 2

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,7 +66,7 @@ a {
 }
 
 .hero-portable-text strong {
-  @apply bg-clip-text text-transparent bg-gradient-to-br from-accent-100 to-accent-700;
+  @apply bg-clip-text text-transparent whitespace-nowrap bg-gradient-to-br from-accent-100 to-accent-700 min-h-fit;
 }
 
 .btn-primary {
